Try updating manifest to fix URL issue

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "Wordle Proposal",
   "short_name": "Wordle",
   "description": "A special Wordle game for a marriage proposal",
-  "start_url": "/wordle",
+  "start_url": "/wordle/",
+  "scope": "/wordle/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#ffffff",
